--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/Vefi-Ecosystem/bitgert_faucet_backend#readme",
   "dependencies": {
+    "@ethereumjs/common": "^2.6.5",
     "@ethereumjs/tx": "^3.5.2",
     "@ethersproject/abi": "^5.6.4",
+    "@ethersproject/constants": "^5.6.1",
     "@ethersproject/units": "^5.6.1",
     "@supercharge/request-ip": "^1.2.0",
     "axios": "^0.27.2",
